--- a/src/components/home.scss
+++ b/src/components/home.scss
@@ -251,6 +251,7 @@ transition:all 1s ease-in;
 #section__10 {
   padding: 0;
   gap: 50px;
+  justify-content: space-around;
 }
 
 #section__11 {
@@ -541,6 +542,8 @@ body {
 
   #section__10 {
     gap: 30px;
+    max-width: 1536px !important;
+    padding:0 130px;
   }
 
   #section__17 {}
